nav bar, links e imagem da logo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
-<div>
-    <h1>teste do matheus</h1>
-    <h2> kkk </h2>
-</div>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navbar</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+  <nav class="navbar">
+    <ul class="logo">
+            <img src="img/logo-swift-interna.png" alt="logo navbar swift">
+    </ul>
+    
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Produtos</a></li>
+      <li><a href="#">Receitas</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
+
+    <div class="cart">
+      <i class="fa-solid fa-cart-shopping"></i>
+    </div>
+  </nav>
+
+</body>
+</html>
+
+
+
+
+
