add home.html e home.css

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Navbar</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
 
   <nav class="navbar">
     <ul class="logo">
-            <img src="img/logo-swift-interna.png" alt="logo navbar swift">
+            <img src="../images/logo-swift-interna.png" alt="logo navbar swift">
     </ul>
     
     <ul class="menu">
