criado tela login cliente/consultora

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,14 +14,13 @@
             <img src="../images/IconeSwift.png" alt="Icone Swift">
         </div>   
         <div class="opcao_login">
-            <a href="#">Sou Cliente</a>
-            <a href="#">Sou Consultora</a>
+            <a href="#" class="botao" >Sou Cliente</a>
+            <a href="#" class="botao" >Sou Consultora</a>
         </div>
     </div>
     <footer class="footer">
         <p>&copy; 2025 - Swift Club</p>
     </footer>
 
-<!--teste commit isa-->
 </body>
 </html>
