--- a/pages/clientelogin.html
+++ b/pages/clientelogin.html
@@ -26,6 +26,8 @@
             </div>
         </div>
     </div>
+    <!-- Teste Sid -->
+    <!-- Teste 2 Sid -->
     <footer class="footer">
         <p>&copy; 2025 - Swift Club</p>
     </footer>
