CSS: Reset e root HTML: link para outras pags

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,8 +14,8 @@
             <img src="../images/IconeSwift.png" alt="Icone Swift">
         </div>   
         <div class="opcao_login">
-            <a href="#" class="botao" >Sou Cliente</a>
-            <a href="#" class="botao" >Sou Consultora</a>
+            <a href="clientelogin.html" class="botao" target="_blank">Sou Cliente</a>
+            <a href="consultoralogin.html" class="botao" target="_blank">Sou Consultora</a>
         </div>
     </div>
     <footer class="footer">
