Não tem uma conta? Cadastre-se

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,11 @@
         <div class="opcao_login">
             <a href="clientelogin.html" class="botao" target="_blank">Sou Cliente</a>
             <a href="consultoralogin.html" class="botao" target="_blank">Sou Consultora</a>
+            <div class="registro">
+                <p> Não tem uma conta? <a href="#" target="_blank">Cadastre-se</a> </p>
+            </div>    
         </div>
+            
     </div>
     <footer class="footer">
         <p>&copy; 2025 - Swift Club</p>
