--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
         </div>   
         <div class="opcao_login">
             <a href="clientelogin.html" class="botao" target="_blank">Sou Cliente</a>
-            <a href="consultoralogin.html" class="botao" target="_blank">Sou Consultora</a>
+            <a href="consultoralogin.html" class="botao" target="_blank">Sou Consultor(a)</a>
             <div class="registro">
                 <p> Não tem uma conta? <a href="#" target="_blank">Cadastre-se</a> </p>
             </div>    
