sei la, fiz tanta coisa que esqueci

--- a/pages/clientelogin.html
+++ b/pages/clientelogin.html
@@ -15,7 +15,7 @@
         </div>   
         <div class="login">
             <div class="fundo_login">
-                <form class="form_login">
+                <form class="form_login" onsubmit="event.preventDefault(); window.location.href='index.html';">
                     <input type="text" id="username" class="form-field" placeholder="Usuário">
                     <input type="password" id="senha" class="form-field" placeholder="Senha">
                     <div class="form-buttons">
@@ -26,8 +26,6 @@
             </div>
         </div>
     </div>
-    <!-- Teste Sid -->
-    <!-- Teste 2 Sid -->
     <footer class="footer">
         <p>&copy; 2025 - Swift Club</p>
     </footer>
