--- a/pages/consultoralogin.html
+++ b/pages/consultoralogin.html
@@ -15,7 +15,7 @@
         </div>   
         <div class="login">
             <div class="fundo_login">
-                <form class="form_login">
+                <form class="form_login" onsubmit="event.preventDefault(); window.location.href='index.html';">
                     <input type="text" id="username" class="form-field" placeholder="Usuário">
                     <input type="password" id="senha" class="form-field" placeholder="Senha">
                     <div class="form-buttons">
