--- a/pages/index.html
+++ b/pages/index.html
@@ -30,6 +30,60 @@
 </html>
 
 
+<section class="hero">
+  <div class="hero-text">
+    <h1>COMPRE ONLINE</h1>
+    <p>Rápido e fácil</p>
+    <button>Compre Agora</button>
+  </div>
+  <div class="hero-image">
+    <img src="https://via.placeholder.com/300x200" alt="Carne na brasa">
+  </div>
+</section>
+
+
+<section class="promotions">
+  <h2>Promoções</h2>
+  <div class="cards">
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Carne">
+      <p><strong>R$ 39,90</strong></p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Linguiça">
+      <p><strong>R$ 24,90</strong></p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Frango">
+      <p><strong>R$ 19,90</strong></p>
+      <button>Comprar</button>
+    </div>
+  </div>
+</section>
+
+
+<section class="categories">
+  <h2>Categorias</h2>
+  <div class="cards">
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Carnes">
+      <p>Carnes</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Linguiças">
+      <p>Linguiças</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Hambúrgueres">
+      <p>Frango</p>
+    </div>
+  </div>
+</section>
+
+
+
 
 
 
