hero, section e nav da index

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,8 @@
 
 <section class="hero">
   <div class="hero-text">
-    <h1>COMPRE ONLINE</h1>
+    <h1>COMPRE</h1>
+    <h2>ONLINE</h2>
     <p>Rápido e fácil</p>
     <button>Compre Agora</button>
   </div>
