foto da index e algumas alterações de tamanho no css da index

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,8 @@
     <button>Compre Agora</button>
   </div>
   <div class="hero-image">
-    <img src="https://via.placeholder.com/300x200" alt="Carne na brasa">
+    <img src="images/carne_index.png" alt="foto carne index">
+    <!--PESSOAL, NÃO ESTOU CONSEGUINDO COLOCAR ESSA IMAGEM, SE ALGUEM QUISER TENTAR DEPOIS, AGRADEÇO-->
   </div>
 </section>
 
