Correção imagem index

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
     <button>Compre Agora</button>
   </div>
   <div class="hero-image">
-    <img src="images/carne_index.png" alt="foto carne index">
+    <img src="../images/carne_index.jpg" alt="foto carne index">
     <!--PESSOAL, NÃO ESTOU CONSEGUINDO COLOCAR ESSA IMAGEM, SE ALGUEM QUISER TENTAR DEPOIS, AGRADEÇO-->
   </div>
 </section>
