--- a/pages/clientelogin.html
+++ b/pages/clientelogin.html
@@ -14,7 +14,7 @@
     <div class="container_red">
         <div class="login">
             <img src="../images/SwiftClub_Cliente.png" alt="Icone Swift">
-            <form class="form_login" onsubmit="event.preventDefault(); window.location.href='index.html';">
+            <form class="form_login" onsubmit="event.preventDefault(); window.open('index.html', '_blank');">
                 <input type="text" id="username" class="form-field" placeholder="Usuário">
                 <input type="password" id="senha" class="form-field" placeholder="Senha">
                 <div class="form-buttons">
