--- a/pages/Cliente_Login.html
+++ b/pages/Cliente_Login.html
@@ -19,7 +19,7 @@
             <div class="secao_login">
                 <img src="../images/SwiftClub_Cliente.png" alt="Logo Swift Club Clientes">
 
-                <form class="form_login">
+                <form class="form_login" onsubmit="event.preventDefault(); window.open('index.html', '_blank');">
                     <input type="text" placeholder="Usuário" required>
                     <input type="password" placeholder="Senha" required>
 
