--- a/pages/home.html
+++ b/pages/home.html
@@ -14,7 +14,7 @@
             <img src="../images/IconeSwift.png" alt="Icone Swift">
         </div>   
         <div class="opcao_login">
-            <a href="clientelogin.html" class="botao" target="_blank">Sou Cliente</a>
+            <a href="Cliente_Login.html" class="botao" target="_blank">Sou Cliente</a>
             <a href="consultoralogin.html" class="botao" target="_blank">Sou Consultor(a)</a>
             <div class="registro">
                 <p> Não tem uma conta? <a href="#" target="_blank">Cadastre-se</a> </p>
