javascript da consultorlogin, mesma coisa da clientelogin, recebe o form e redireciona

--- a/pages/consultoralogin.html
+++ b/pages/consultoralogin.html
@@ -19,8 +19,8 @@
             <div class="secao_login">
                 <img src="../images/SwiftClub_Consultora.png" alt="Logo Swift Club Consultores">
 
-                <form class="form_login" onsubmit="event.preventDefault(); window.open('index.html', '_blank');">
-                    <input type="text" placeholder="Usuário" required>
+                <form class="form_login" id="formLoginConsultor">
+                    <input type="text" placeholder="Usuário Consultor" required>
                     <input type="password" placeholder="Senha" required>
 
                     <div class="forms_link">
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-
+    <script src="../js/consultoraLogin.js"></script>
 </body>
 
 </html>
