--- a/pages/Cliente_Login.html
+++ b/pages/Cliente_Login.html
@@ -19,8 +19,8 @@
             <div class="secao_login">
                 <img src="../images/SwiftClub_Cliente.png" alt="Logo Swift Club Clientes">
 
-                <form class="form_login" id="formLogin">
-                    <input type="text" placeholder="Usuário" required>
+                <form class="form_login" id="formLoginCliente">
+                    <input type="text" placeholder="Usuário Cliente" required>
                     <input type="password" placeholder="Senha" required>
 
                     <div class="forms_link">
