mais opcoes no menu da index

--- a/pages/index.html
+++ b/pages/index.html
@@ -75,13 +75,24 @@
     </div>
     <div class="card">
       <img src="https://via.placeholder.com/150x100" alt="Linguiças">
-      <p>Linguiças</p>
+      <p>Snacks</p>
     </div>
     <div class="card">
       <img src="https://via.placeholder.com/150x100" alt="Hambúrgueres">
       <p>Frango</p>
     </div>
-  </div>
+        <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Vegano">
+      <p>100% vegetal</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Snacks">
+      <p>Snacks</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/150x100" alt="Pescados">
+      <p>Pecados</p>
+    </div>
 </section>
 
 
