imagens index-promotions

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,17 +48,17 @@
   <h2>Promoções</h2>
   <div class="cards">
     <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Carne">
+      <img src="../images/carne.png" alt="Carne">
       <p><strong>R$ 39,90</strong></p>
       <button>Comprar</button>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Linguiça">
+      <img src="../images/linguica.png" alt="Linguiça">
       <p><strong>R$ 24,90</strong></p>
       <button>Comprar</button>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Frango">
+      <img src="../images/frango.png" alt="Frango">
       <p><strong>R$ 19,90</strong></p>
       <button>Comprar</button>
     </div>
