--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,95 +9,97 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+  <header class="header">
 
-  <nav class="navbar">
-    <ul class="logo">
-            <img src="../images/logo-swift-interna.png" alt="logo navbar swift">
-    </ul>
-    
-    <ul class="menu">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Produtos</a></li>
-      <li><a href="#">Receitas</a></li>
-      <li><a href="#">Contato</a></li>
-    </ul>
+    <section>
+      <a href="#" class="logo">
+        <img src="../images/logo-swift-interna.png" alt="logo navbar swift">
+      </a>
 
-    <div class="cart">
-      <i class="fa-solid fa-cart-shopping"></i>
+      <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Produtos</a>
+        <a href="#">Receitas</a>
+        <a href="#">Contato</a>
+      </nav>
+
+      <div class="icons">
+        <i class="fa-solid fa-search"></i>
+        <i class="fa-solid fa-cart-shopping"></i>
+        <i class="fa-solid fa-user"
+      </div>
+
+    </section>
+  </header>
+
+
+  <section class="hero">
+    <div class="hero-text">
+      <h1>COMPRE</h1>
+      <h2>ONLINE</h2>
+      <p>Rápido e fácil</p>
+      <button>Compre Agora</button>
     </div>
-  </nav>
+    <div class="hero-image">
+      <img src="../images/carne_index.jpg" alt="foto carne index">
+      <!--PESSOAL, NÃO ESTOU CONSEGUINDO COLOCAR ESSA IMAGEM, SE ALGUEM QUISER TENTAR DEPOIS, AGRADEÇO-->
+    </div>
+  </section>
+
+
+  <section class="promotions">
+    <h2>Promoções</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="../images/carne.png" alt="Carne">
+        <p><strong>R$ 39,90</strong></p>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="../images/linguica.png" alt="Linguiça">
+        <p><strong>R$ 24,90</strong></p>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="../images/frango.png" alt="Frango">
+        <p><strong>R$ 19,90</strong></p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="categories">
+    <h2>Categorias</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="https://via.placeholder.com/150x100" alt="Carnes">
+        <p>Carnes</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/150x100" alt="Linguiças">
+        <p>Snacks</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/150x100" alt="Hambúrgueres">
+        <p>Frango</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/150x100" alt="Vegano">
+        <p>100% vegetal</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/150x100" alt="Snacks">
+        <p>Snacks</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/150x100" alt="Pescados">
+        <p>Pecados</p>
+      </div>
+  </section>
+
 </body>
+
 </html>
-
-
-<section class="hero">
-  <div class="hero-text">
-    <h1>COMPRE</h1>
-    <h2>ONLINE</h2>
-    <p>Rápido e fácil</p>
-    <button>Compre Agora</button>
-  </div>
-  <div class="hero-image">
-    <img src="../images/carne_index.jpg" alt="foto carne index">
-    <!--PESSOAL, NÃO ESTOU CONSEGUINDO COLOCAR ESSA IMAGEM, SE ALGUEM QUISER TENTAR DEPOIS, AGRADEÇO-->
-  </div>
-</section>
-
-
-<section class="promotions">
-  <h2>Promoções</h2>
-  <div class="cards">
-    <div class="card">
-      <img src="../images/carne.png" alt="Carne">
-      <p><strong>R$ 39,90</strong></p>
-      <button>Comprar</button>
-    </div>
-    <div class="card">
-      <img src="../images/linguica.png" alt="Linguiça">
-      <p><strong>R$ 24,90</strong></p>
-      <button>Comprar</button>
-    </div>
-    <div class="card">
-      <img src="../images/frango.png" alt="Frango">
-      <p><strong>R$ 19,90</strong></p>
-      <button>Comprar</button>
-    </div>
-  </div>
-</section>
-
-
-<section class="categories">
-  <h2>Categorias</h2>
-  <div class="cards">
-    <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Carnes">
-      <p>Carnes</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Linguiças">
-      <p>Snacks</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Hambúrgueres">
-      <p>Frango</p>
-    </div>
-        <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Vegano">
-      <p>100% vegetal</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Snacks">
-      <p>Snacks</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/150x100" alt="Pescados">
-      <p>Pecados</p>
-    </div>
-</section>
-
-
-
-
-
-
