--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
       <div class="icons">
         <i class="fa-solid fa-search"></i>
         <i class="fa-solid fa-cart-shopping"></i>
-        <i class="fa-solid fa-user"
+        <i class="fa-solid fa-user"></i>
       </div>
 
     </section>
@@ -36,15 +36,15 @@
 
 
   <section class="hero">
-    <div class="hero-text">
-      <h1>COMPRE</h1>
-      <h2>ONLINE</h2>
+    <div class="boas-vindas">
+      <h1>Olá, Dona Marta!</h1>
+    </div>
+    <div class="compre">
+      <h2>COMPRE</h2>
+      <h3>ONLINE</h3>
       <p>Rápido e fácil</p>
       <button>Compre Agora</button>
     </div>
-    <div class="hero-image">
-      <img src="../images/carne_index.jpg" alt="foto carne index">
-      <!--PESSOAL, NÃO ESTOU CONSEGUINDO COLOCAR ESSA IMAGEM, SE ALGUEM QUISER TENTAR DEPOIS, AGRADEÇO-->
     </div>
   </section>
 
