--- a/pages/index.html
+++ b/pages/index.html
@@ -37,7 +37,7 @@
 
   <section class="hero">
     <div class="boas-vindas">
-      <h1>Olá, Dona Marta!</h1>
+      <h1>Olá, Marta!</h1>
     </div>
     <div class="compre">
       <h2>COMPRE</h2>
@@ -46,6 +46,35 @@
       <button>Compre Agora</button>
     </div>
     </div>
+  </section>
+
+  <section class="categories">
+    <h2>Categorias</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="../images/carne_categoria.jpg" alt="Carnes">
+        <p>Carnes</p>
+      </div>
+      <div class="card">
+        <img src="../images/linguica_categoria.jpg" alt="Linguiças">
+        <p>Snacks</p>
+      </div>
+      <div class="card">
+        <img src="../images/aves_categoria.jpg" alt="Aves">
+        <p>Frango</p>
+      </div>
+      <div class="card">
+        <img src="../images/vegetal_categoria.jpg" alt="Vegano">
+        <p>100% vegetal</p>
+      </div>
+      <div class="card">
+        <img src="../images/snacks_categoria.jpg" alt="Snacks">
+        <p>Snacks</p>
+      </div>
+      <div class="card">
+        <img src="../images/pescados_categoria.jpg" alt="Pescados">
+        <p>Pecados</p>
+      </div>
   </section>
 
 
@@ -68,36 +97,6 @@
         <button>Comprar</button>
       </div>
     </div>
-  </section>
-
-
-  <section class="categories">
-    <h2>Categorias</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="https://via.placeholder.com/150x100" alt="Carnes">
-        <p>Carnes</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/150x100" alt="Linguiças">
-        <p>Snacks</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/150x100" alt="Hambúrgueres">
-        <p>Frango</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/150x100" alt="Vegano">
-        <p>100% vegetal</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/150x100" alt="Snacks">
-        <p>Snacks</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/150x100" alt="Pescados">
-        <p>Pecados</p>
-      </div>
   </section>
 
 </body>
