--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
 
       <nav class="navbar">
         <a href="#">Home</a>
-        <a href="#">Produtos</a>
+        <a href="#produtos">Produtos</a>
         <a href="#">Receitas</a>
         <a href="#">Contato</a>
       </nav>
@@ -48,32 +48,34 @@
     </div>
   </section>
 
-  <section class="categories">
-    <h2>Categorias</h2>
+  <section class="categories" id="produtos">
     <div class="cards">
       <div class="card">
-        <img src="../images/carne_categoria.jpg" alt="Carnes">
-        <p>Carnes</p>
+        <h4>TODOS<br>OS PRODUTOS</h4>
       </div>
       <div class="card">
-        <img src="../images/linguica_categoria.jpg" alt="Linguiças">
-        <p>Snacks</p>
+        <img width="80" height="80" src="https://img.icons8.com/carbon-copy/100/steak-rare.png" alt="Carnes"/> 
+        <p>Bovinos</p>
       </div>
       <div class="card">
-        <img src="../images/aves_categoria.jpg" alt="Aves">
-        <p>Frango</p>
+        <img width="60" height="60" src="https://img.icons8.com/carbon-copy/100/sausage.png" alt="Linguiças">
+        <p>Suínos</p>
       </div>
       <div class="card">
-        <img src="../images/vegetal_categoria.jpg" alt="Vegano">
+        <img width="90" height="90" src="https://img.icons8.com/external-edtim-outline-edtim/100/external-food-and-drinks-food-and-drinks-edtim-outline-edtim-7.png" alt="Aves">
+        <p>Aves</p>
+      </div>
+      <div class="card">
+        <img width="45" height="45" src="https://img.icons8.com/ios/100/leaf--v1.png" alt="Vegetarianos"/>
         <p>100% vegetal</p>
       </div>
       <div class="card">
-        <img src="../images/snacks_categoria.jpg" alt="Snacks">
+       <img width="50" height="50" src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-vitaly-gorbachev/60/external-nuggets-fast-food-vitaliy-gorbachev-lineal-vitaly-gorbachev.png" alt="snacks"/>
         <p>Snacks</p>
       </div>
       <div class="card">
-        <img src="../images/pescados_categoria.jpg" alt="Pescados">
-        <p>Pecados</p>
+        <img width="50" height="50" src="https://img.icons8.com/parakeet-line/96/fish.png" alt="Pescados">
+        <p>Pescados</p>
       </div>
   </section>
 
