--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
 
       <nav class="navbar">
         <a href="#">Home</a>
-        <a href="#produtos">Produtos</a>
+        <a href="#categories">Produtos</a>
         <a href="#">Receitas</a>
         <a href="#">Contato</a>
       </nav>
@@ -48,7 +48,7 @@
     </div>
   </section>
 
-  <section class="categories" id="produtos">
+  <section class="categories" id="categories">
     <div class="cards">
       <div class="card">
         <h4>TODOS<br>OS PRODUTOS</h4>
