--- a/pages/index.html
+++ b/pages/index.html
@@ -21,6 +21,7 @@
       <nav class="navbar">
         <a href="#">Home</a>
         <a href="#categories">Produtos</a>
+        <a href="#promotions">Promoções</a>
         <a href="#">Receitas</a>
         <a href="#">Contato</a>
       </nav>
@@ -54,7 +55,7 @@
         <h4>TODOS<br>OS PRODUTOS</h4>
       </div>
       <div class="card">
-        <img width="60" height="60" src="https://img.icons8.com/carbon-copy/100/steak-rare.png" alt="Carnes"/> 
+        <img width="60" height="60" src="https://img.icons8.com/carbon-copy/100/steak-rare.png" alt="Carnes" />
         <p>Bovinos</p>
       </div>
       <div class="card">
@@ -62,15 +63,19 @@
         <p>Suínos</p>
       </div>
       <div class="card">
-        <img width="70" height="70" src="https://img.icons8.com/external-edtim-outline-edtim/100/external-food-and-drinks-food-and-drinks-edtim-outline-edtim-7.png" alt="Aves">
+        <img width="70" height="70"
+          src="https://img.icons8.com/external-edtim-outline-edtim/100/external-food-and-drinks-food-and-drinks-edtim-outline-edtim-7.png"
+          alt="Aves">
         <p>Aves</p>
       </div>
       <div class="card">
-        <img width="25" height="25" src="https://img.icons8.com/ios/100/leaf--v1.png" alt="Vegetarianos"/>
+        <img width="25" height="25" src="https://img.icons8.com/ios/100/leaf--v1.png" alt="Vegetarianos" />
         <p>100% vegetal</p>
       </div>
       <div class="card">
-       <img width="30" height="30" src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-vitaly-gorbachev/60/external-nuggets-fast-food-vitaliy-gorbachev-lineal-vitaly-gorbachev.png" alt="snacks"/>
+        <img width="30" height="30"
+          src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-vitaly-gorbachev/60/external-nuggets-fast-food-vitaliy-gorbachev-lineal-vitaly-gorbachev.png"
+          alt="snacks" />
         <p>Snacks</p>
       </div>
       <div class="card">
@@ -80,24 +85,39 @@
   </section>
 
 
-  <section class="promotions">
+  <section class="promotions" id="promotions">
     <h2>Promoções</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="../images/carne.png" alt="Carne">
-        <p><strong>R$ 39,90</strong></p>
-        <button>Comprar</button>
+    <div class="box-container">
+
+      <div class="box">
+        <img src="../images/file_mignon.jpg" alt="Medalhão de Filé Mignon">
+        <h3>Filé Mignon 1kg</h3>
+        <div class="price">R$95,90 <span>R$107,90</span></div>
+        <button>Adicione ao carrinho</button>
       </div>
-      <div class="card">
-        <img src="../images/linguica.png" alt="Linguiça">
-        <p><strong>R$ 24,90</strong></p>
-        <button>Comprar</button>
+
+      <div class="box">
+        <img src="../images/linguica_toscana.jpg" alt="Linguiça">
+        <h3>Linguiça Toscana 700g</h3>
+        <div class="price">R$15,00 <span>R$17,90</span></div>
+        <button>Adicione ao carrinho</button>
       </div>
-      <div class="card">
-        <img src="../images/frango.png" alt="Frango">
-        <p><strong>R$ 19,90</strong></p>
-        <button>Comprar</button>
+
+      <div class="box">
+        <img src="../images/fila_peito.jpg" alt="Peito de Frango Linha Mais">
+        <h3>Filé de Peito Linha Mais 1kg</h3>
+        <div class="price">R$20,90 <span>R$22,90</span></div>
+        <button>Adicione ao carrinho</button>
       </div>
+
+       <div class="box">
+        <img src="../images/salmao.jpg" alt="Filé de Salmão">
+        <h3>Filé de Salmão 500g</h3>
+        <div class="price">R$40,90 <span>R$49,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
+
+
     </div>
   </section>
 
