--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar">
         <a href="#">Home</a>
         <a href="#categories">Produtos</a>
-        <a href="#promotions">Promoções</a>
+        <a href="#promotions">No Precinho</a>
         <a href="#">Receitas</a>
         <a href="#">Contato</a>
       </nav>
@@ -84,9 +84,32 @@
       </div>
   </section>
 
+  <section class="pontos">
+    <div class="meus_pontos">
+      <h2>Meus Pontos</h2>
+      <h3>280</h3>
+      <h4>Nível Prata <img src="../images/estrela_prata.png" alt="Estrela Prata" /> </h4>
+      <button>Ver prêmios disponíveis</button>
+    </div>
+
+    <div class="missoes">
+      <h2>Missões</h2>
+      <ul>
+        <li><span>50 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> R$100,00 gastos em
+          produtos</li>
+        <li><span>5 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Login diário</li>
+        <li><span>15 potos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Avalie seu
+          atendimento</li>
+        <li><span>10 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Avalie a loja
+          visitada</li>
+      </ul>
+      <button>Ver mais</button>
+    </div>
+  </section>
+
 
   <section class="promotions" id="promotions">
-    <h2>Promoções</h2>
+    <h2>No Precinho Para Você</h2>
     <div class="box-container">
 
       <div class="box">
@@ -110,10 +133,17 @@
         <button>Adicione ao carrinho</button>
       </div>
 
-       <div class="box">
+      <div class="box">
         <img src="../images/salmao.jpg" alt="Filé de Salmão">
         <h3>Filé de Salmão 500g</h3>
         <div class="price">R$40,90 <span>R$49,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
+
+      <div class="box">
+        <img src="../images/farofa.jpg" alt="Farofa">
+        <h3>Farofa Tradicional 400g</h3>
+        <div class="price">R$9,90 <span>R$11,90</span></div>
         <button>Adicione ao carrinho</button>
       </div>
 
