--- a/pages/index.html
+++ b/pages/index.html
@@ -98,12 +98,12 @@
         <li><span>50 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> R$100,00 gastos em
           produtos</li>
         <li><span>5 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Login diário</li>
-        <li><span>15 potos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Avalie seu
+        <li><span>15 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Avalie seu
           atendimento</li>
         <li><span>10 pontos <img src="../images/estrela_dourada.png" alt="Estrela Dourada"> </span> Avalie a loja
           visitada</li>
       </ul>
-      <button>Ver mais</button>
+      <a href="#">Ver mais</a>
     </div>
   </section>
 
