clienteLogin.js, index.js, Cliente_Login.html e index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
 
   <section class="hero">
     <div class="boas-vindas">
-      <h1>Olá, Marta!</h1>
+      <h1 id="mensagemCliente"></h1>
     </div>
     <div class="compre">
       <h2>COMPRE</h2>
@@ -150,7 +150,7 @@
 
     </div>
   </section>
-
+<script src="../js/index.js"></script>
 </body>
 
 </html>
