--- a/pages/Cliente_Login.html
+++ b/pages/Cliente_Login.html
@@ -19,9 +19,9 @@
             <div class="secao_login">
                 <img src="../images/SwiftClub_Cliente.png" alt="Logo Swift Club Clientes">
 
-                <form class="form_login" id="formLoginCliente">
-                    <input type="text" placeholder="Usuário Cliente" required>
-                    <input type="password" placeholder="Senha" required>
+                <form action="index.html" method="get" class="form_login" id="formLoginCliente">
+                    <input id="nomeCliente" name="nomeCliente"type="text" placeholder="Usuário Cliente" required>
+                    <input type="password" name="senhaCliente" placeholder="Senha" required>
 
                     <div class="forms_link">
                         <label>
