--- a/pages/index.html
+++ b/pages/index.html
@@ -48,6 +48,7 @@
     </div>
     </div>
   </section>
+  <script src="../js/index.js"></script>
 
   <section class="categories" id="categories">
     <div class="cards">
@@ -147,13 +148,12 @@
         <button>Adicione ao carrinho</button>
       </div>
 
-
     </div>
   </section>
 
 
   <section class="bestSellers" id="bestSellers">
-    <h2>No Precinho Para Você</h2>
+    <h2>Mais vendidos</h2>
     <div class="box-container">
 
       <div class="box">
@@ -190,11 +190,57 @@
         <div class="price">R$9,90 <span>R$11,90</span></div>
         <button>Adicione ao carrinho</button>
       </div>
+      
+    </div>
+  </section>
+
+
+    <section class="packaged" id="packaged">
+    <h2>Embalados</h2>
+    <div class="box-container">
+
+      <div class="box">
+        <img src="../embalados/embaladosBisteca.jpg" alt="Bisteca">
+        <h3>Bisteca 1kg</h3>
+        <div class="price">R$95,90 <span>R$107,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
+
+      <div class="box">
+        <img src="../embalados/embaladosCoracao.jpg" alt="Coracao">
+        <h3>Coração 1kg </h3>
+        <div class="price">R$15,00 <span>R$17,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
+
+      <div class="box">
+        <img src="../embalados/embaladosCoxaDeAasa.jpg" alt="CoxaDeAsa">
+        <h3>Coxa de Asa 1kg</h3>
+        <div class="price">R$20,90 <span>R$22,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
+
+      <div class="box">
+        <img src="../embalados/embaladosFileDePeito.jpg" alt="FileDePeito">
+        <h3>Filé De Peito 1kg</h3>
+        <div class="price">R$40,90 <span>R$49,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
+
+      <div class="box">
+        <img src="../embalados/embaladosLinguiça.jpg" alt="Farofa">
+        <h3>Linguiça 1kg</h3>
+        <div class="price">R$9,90 <span>R$11,90</span></div>
+        <button>Adicione ao carrinho</button>
+      </div>
 
 
     </div>
   </section>
-<script src="../js/index.js"></script>
+
+
+
+
 </body>
 
 </html>
