--- a/pages/index.html
+++ b/pages/index.html
@@ -113,35 +113,35 @@
     <div class="box-container">
 
       <div class="box">
-        <img src="../images/file_mignon.jpg" alt="Medalhão de Filé Mignon">
-        <h3>Filé Mignon 1kg</h3>
+        <img src="../promocoes/carne.png" alt="Pichanha">
+        <h3>Picanha 1kg</h3>
         <div class="price">R$95,90 <span>R$107,90</span></div>
         <button>Adicione ao carrinho</button>
       </div>
 
       <div class="box">
-        <img src="../images/linguica_toscana.jpg" alt="Linguiça">
+        <img src="../promocoes/linguica_toscana.jpg" alt="Linguiça Toscana">
         <h3>Linguiça Toscana 700g</h3>
         <div class="price">R$15,00 <span>R$17,90</span></div>
         <button>Adicione ao carrinho</button>
       </div>
 
       <div class="box">
-        <img src="../images/fila_peito.jpg" alt="Peito de Frango Linha Mais">
+        <img src="../promocoes/fila_peito.jpg" alt="Filé de Peito de Frango">
         <h3>Filé de Peito Linha Mais 1kg</h3>
         <div class="price">R$20,90 <span>R$22,90</span></div>
         <button>Adicione ao carrinho</button>
       </div>
 
       <div class="box">
-        <img src="../images/salmao.jpg" alt="Filé de Salmão">
+        <img src="../promocoes/salmao.jpg" alt="Filé de Salmão">
         <h3>Filé de Salmão 500g</h3>
         <div class="price">R$40,90 <span>R$49,90</span></div>
         <button>Adicione ao carrinho</button>
       </div>
 
       <div class="box">
-        <img src="../images/farofa.jpg" alt="Farofa">
+        <img src="../promocoes/farofa.jpg" alt="Farofa">
         <h3>Farofa Tradicional 400g</h3>
         <div class="price">R$9,90 <span>R$11,90</span></div>
         <button>Adicione ao carrinho</button>
