--- a/pages/consultoralogin.html
+++ b/pages/consultoralogin.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -36,7 +37,28 @@
             </div>
         </div>
     </div>
-    <script src="../js/consultoraLogin.js"></script>
+
+<footer>
+  <div class="footer-container">
+      <!-- Logo -->
+    <div class="footer-logo">
+      <img src="../images/IconeSwift.png" alt="footer logo">
+    </div>
+
+      <!-- Redes sociais -->
+<div class="footer-social">
+    <a href="https://www.facebook.com/lojaswift" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.instagram.com/lojaswift" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/channel/UCx_DnTAyLKfvLj5r788zXng" target="_blank"><i class="fab fa-youtube"></i></a>
+  </div>
+
+      <!-- Copy centralizado -->
+    <div class="footer-copy">
+    &copy; 2025 - Swift Club. Todos os direitos reservados.
+    </div>
+  </div>
+</footer>   
+<script src="../js/consultoraLogin.js"></script>
 </body>
 
 </html>
