--- a/pages/home.html
+++ b/pages/home.html
@@ -19,11 +19,28 @@
             <div class="registro">
                 <p> Não tem uma conta? <a href="#" target="_blank">Cadastre-se</a> </p>
             </div>    
-        </div>
-            
+        </div>       
     </div>
-    <footer class="footer">
-        <p>&copy; 2025 - Swift Club</p>
-    </footer>
+
+<footer>
+  <div class="footer-container">
+      <!-- Logo -->
+    <div class="footer-logo">
+      <img src="../images/IconeSwift.png" alt="footer logo">
+    </div>
+
+      <!-- Redes sociais -->
+  <div class="footer-social">
+    <a href="https://www.facebook.com/lojaswift" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.instagram.com/lojaswift" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/channel/UCx_DnTAyLKfvLj5r788zXng" target="_blank"><i class="fab fa-youtube"></i></a>
+  </div>
+
+      <!-- Copy centralizado -->
+    <div class="footer-copy">
+    &copy; 2025 - Swift Club. Todos os direitos reservados.
+    </div>
+  </div>
+  </footer>
 </body>
 </html>
