--- a/pages/index.html
+++ b/pages/index.html
@@ -89,7 +89,10 @@
     <!-- Pontos atuais -->
     <div class="pontos">
       <h3>Seus Pontos</h3>
-      <p class="pontos-qntd">1.250</p>
+      <div class="pontos-qntd">
+        <p>250</p>
+        <img src="../images/estrela_prata.png">
+      </div>
     </div>
 
     <!-- Recompensas -->
