--- a/pages/index.html
+++ b/pages/index.html
@@ -90,23 +90,35 @@
     <div class="pontos">
       <h3>Seus Pontos</h3>
       <div class="pontos-qntd">
-        <p>250</p>
-        <img src="../images/estrela_prata.png">
+        <p>550</p>
+        <img src="../images/estrela_dourada.png">
       </div>
     </div>
 
     <!-- Recompensas -->
     <div class="recompensas-lista">
       <div class="premio">
-        <img src="https://img.icons8.com/fluency/48/gift.png" alt="Recompensa">
-        <h4>Desconto de 10%</h4>
-        <p>Troque por 500 pontos</p>
+        <img width="50" height="50" src="https://img.icons8.com/ios/50/loyalty-card.png" alt="Cupom" />
+        <h4>R$50,00 OFF COM NOSSOS PARCEIROS</h4>
+        <p>Troque por 350 pontos</p>
       </div>
 
       <div class="premio">
-        <img src="https://img.icons8.com/fluency/48/trophy.png" alt="Recompensa">
-        <h4>Brinde Exclusivo</h4>
-        <p>Troque por 1000 pontos</p>
+        <img width="50" height="50" src="https://img.icons8.com/ios/50/loyalty-card.png" alt="Cupom" />
+        <h4>R$100,00 OFF COM NOSSOS PARCEIROS</h4>
+        <p>Troque por 550 pontos</p>
+      </div>
+
+      <div class="premio">
+        <img width="50" height="50" src="https://img.icons8.com/ios/50/loyalty-card.png" alt="Cupom" />
+        <h4>R$30,00 EM LOJAS SWIFT</h4>
+        <p>Troque por 220 pontos</p>
+      </div>
+
+      <div class="premio">
+        <img width="50" height="50" src="https://img.icons8.com/ios/50/loyalty-card.png" alt="Cupom" />
+        <h4>CUPOM LANCHINHO SWIFT R$30,00</h4>
+        <p>Troque por 320 pontos</p>
       </div>
     </div>
 
