--- a/pages/index.html
+++ b/pages/index.html
@@ -124,12 +124,68 @@
 
     <!-- Missões -->
     <div class="missoes">
-      <h3>Missões Ativas</h3>
-      <ul>
-        <li><input type="checkbox" checked> Completar o cadastro (+200 pts)</li>
-        <li><input type="checkbox"> Fazer sua primeira compra (+500 pts)</li>
-        <li><input type="checkbox"> Convidar um amigo (+300 pts)</li>
-      </ul>
+      <h3>Missões Disponíveis</h3>
+
+      <div class="animacoes">
+        <!-- quando recebe o click, faz a ação -->
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">5 pontos</div>
+            <div class="flip_face card_back">Login diário</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">15 pontos</div>
+            <div class="flip_face card_back">Avalie seu atendimento</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">15 pontos</div>
+            <div class="flip_face card_back">Avalie seu consultor</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">20 pontos</div>
+            <div class="flip_face card_back">Indique um amigo</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">5 pontos</div>
+            <div class="flip_face card_back">Gaste R$10,00</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">10 pontos</div>
+            <div class="flip_face card_back">Avalie a loja visitada</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">10 pontos</div>
+            <div class="flip_face card_back">Insira uma foto da loja visitada</div>
+          </div>
+        </div>
+
+        <div class="flip_container" onclick="this.classList.toggle('clicked')">
+          <div class="flip_card">
+            <div class="flip_face card_front">100 pontos</div>
+            <div class="flip_face card_back">Feliz Páscoa! (Compre um bacalhau)</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
     </div>
   </section>
 
