--- a/pages/index.html
+++ b/pages/index.html
@@ -173,7 +173,7 @@
         <div class="flip_container" onclick="this.classList.toggle('clicked')">
           <div class="flip_card">
             <div class="flip_face card_front">10 pontos</div>
-            <div class="flip_face card_back">Insira uma foto da loja visitada</div>
+            <div class="flip_face card_back">Foto da loja visitada</div>
           </div>
         </div>
 
