--- a/pages/index.html
+++ b/pages/index.html
@@ -21,14 +21,26 @@
       <nav class="navbar">
         <a href="#">Home</a>
         <a href="#categories">Produtos</a>
+        <a href="#swift_club">Swift Club</a>
         <a href="#promotions">No Precinho</a>
-        <a href="#">Receitas</a>
-        <a href="#">Contato</a>
+        <a href="#footer">Nossas redes</a>
       </nav>
 
       <div class="icons">
         <i class="fa-solid fa-search"></i>
-        <a href="card.html"><i class="fa-solid fa-cart-shopping"></i></a> <i class="fa-solid fa-user"></i>
+        <a href="card.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <div class="perfil">
+          <button onclick="menu.hidden^=1"><i class="fa-solid fa-user"></i></button>
+          <ul id="menu" hidden>
+            <li>Perfil</li>
+            <li>Histórico de compras</li>
+            <li>Chat com o consultor</li>
+            <li>Loja Swift</li>
+            <li>Meu Swift Club</li>
+            <li>Configurações</li>
+            <li>Sair</li>
+          </ul>
+        </div>
       </div>
 
     </section>
@@ -87,7 +99,7 @@
     <h2>Meus Pontos & Recompensas</h2>
 
     <!-- Pontos atuais -->
-    <div class="pontos">
+    <div class="pontos" id="swift_club">
       <h3>Seus Pontos</h3>
       <div class="pontos-qntd">
         <p>550</p>
@@ -365,7 +377,7 @@
 
 
   <footer>
-    <div class="footer-container">
+    <div class="footer-container" id="footer">
       <!-- Logo -->
       <div class="footer-logo">
         <img src="../images/IconeSwift.png" alt="footer logo">
