--- a/pages/index.html
+++ b/pages/index.html
@@ -29,9 +29,10 @@
       <div class="icons">
         <i class="fa-solid fa-search"></i>
         <a href="card.html"><i class="fa-solid fa-cart-shopping"></i></a>
+
         <div class="perfil">
           <button onclick="menu.hidden^=1"><i class="fa-solid fa-user"></i></button>
-          <ul id="menu" hidden>
+          <ul class="menu" id="menu" hidden>
             <li>Perfil</li>
             <li>Histórico de compras</li>
             <li>Chat com o consultor</li>
@@ -41,6 +42,7 @@
             <li>Sair</li>
           </ul>
         </div>
+        
       </div>
 
     </section>
