Descrição visualização de missões

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,7 @@
             <li>Sair</li>
           </ul>
         </div>
-        
+
       </div>
 
     </section>
@@ -139,7 +139,7 @@
     <!-- Missões -->
     <div class="missoes">
       <h3>Missões Disponíveis</h3>
-
+      <h5>Clique na estrela para ver mais</h5>
       <div class="animacoes">
         <!-- quando recebe o click, faz a ação -->
         <div class="flip_container" onclick="this.classList.toggle('clicked')">
