--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -4,15 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página inicial consultor</title>
+    <title>Página Inicial Consultor</title>
     <link rel="stylesheet" href="../css/index_consultor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
+<header class="header">
+
+    <section>
+        <a href="#" class="logo">
+            <img src="../images/logo-swift-interna.png" alt="logo navbar swift">
+        </a>
+
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#swift_club">Swift Club</a>
+            <a href="#footer">Nossas redes</a>
+        </nav>
+
+        <div class="icons">
+            <i class="fa-solid fa-search"></i>
+            <i class="fa-regular fa-comments"></i>
+            <div class="perfil">
+                <button onclick="menu.hidden^=1"><i class="fa-solid fa-user"></i></button>
+                <ul class="menu" id="menu" hidden>
+                    <li>Perfil</li>
+                    <li>Carteira de clientes</li>
+                    <li>Chats</li>
+                    <li>Ranking</li>
+                    <li>Meu Swift Club</li>
+                    <li>Cadastrar novo cliente</li>
+                    <li>Configurações</li>
+                    <li>Sair</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+</header>
+
+<section class="hero">
+    <div class="boas-vindas">
+        <!-- mudar no js -->
+        <h1 id="mensagemCliente"></h1> 
+    </div>
+    <div class="compre">
+        <h2>COMPRE</h2>
+        <h3>ONLINE</h3>
+        <p>Rápido e fácil</p>
+        <button>Compre Agora</button>
+    </div>
+    </div>
+</section>
+
 <body>
 
-    
+
 </body>
 
 </html>
