--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Inicial</title>
+  <title>Página Inicial Cliente</title>
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -383,6 +383,7 @@
       <!-- Logo -->
       <div class="footer-logo">
         <img src="../images/IconeSwift.png" alt="footer logo">
+        <p>PREÇO BAIXO: PERFEITO PARA SEU BOLSO</p>
       </div>
 
       <!-- Redes sociais -->
